--- a/index.html
+++ b/index.html
@@ -1773,7 +1773,7 @@
               <div class="col-md-4 col-sm-6 mb-4">
                 <div class="industry-card wow animate__animated animate__fadeInRight" data-wow-delay="300ms">
                   <span class="industry-badge">FIFO Engineering</span>
-                  <img src="img/bg/fifo-eng.JPG" alt="fifo-eng" class="img-fluid" />
+                  <img src="img/bg/fifo-eng.jpg" alt="fifo-eng" class="img-fluid" />
                   <!-- <h5 class="mt-3"><a href="">FIFO Engineering</a></h5> -->
                   <p>
                     Heavy engineering Fabrication Unit <br />
